@@ -2162,7 +2162,6 @@ sub save_pdf {
         quality          => $SETTING{quality},
         font             => $SETTING{'pdf font'},
         'user-password'  => $windowi->get('pdf-user-password'),
-        'owner-password' => $windowi->get('pdf-owner-password'),
         set_timestamp    => $SETTING{set_timestamp},
         'convert whitespace to underscores' =>
           $SETTING{'convert whitespace to underscores'},
@@ -3122,7 +3121,6 @@ sub email {
                 quality          => $SETTING{quality},
                 font             => $SETTING{'pdf font'},
                 'user-password'  => $windowe->get('pdf-user-password'),
-                'owner-password' => $windowe->get('pdf-owner-password'),
             );
 
             my $filename = Gscan2pdf::Document::expand_metadata_pattern(
