@@ -7,6 +7,7 @@
   Closes bug #323 (Crash when saving with invalid date)
 * Use GTK's FontChooserDialog for selecting font for OCR output in PDF
 * Moved font discovery to program start to accelerate display of save dialog
+* Removed owner password, as it does not encrypt.
 
 
 2.5.2 (22.04.2019):
